--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
-APP_PORT = 8080
+APP_PORT = 3001
 
 DB_HOST = localhost
 DB_USER = root
 DB_PASSWORD = Fahmiamir354
-DB_NAME = choicesport
+DB_NAME = kuyfutsal
