--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "api-start" : "nodemon index.js"
-
+    "api-start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.9",
     "nodemon": "^3.1.2"
   }
