--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@ APP_PORT = 3001
 
 DB_HOST = localhost
 DB_USER = root
-DB_PASSWORD = Fahmiamir354
+DB_PASSWORD = 
 DB_NAME = kuyfutsal
 
 ACCESS_TOKEN_SECRET=your_jwt_secret
